# imei-check-bot

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/app/: api.py  main.py
app/app/core/: bot.py  config.py
app/app/handlers/: imei_handler.py  start_handler.py
app/app/middlewares/: white_list.py
app/app/schemas/: imei.py
app/app/services/: imeicheck.py
app/app/utils/: imei_validator.py
