[tool.poetry]
name = "imei-check-bot"
version = "0.1.0"
description = ""
authors = ["melixz <dr.melix@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.7.1"
aiogram = "^3.17.0"
ruff = "^0.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
